--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
+    "ejs-lint": "^0.3.0",
     "eslint": "^5.15.1",
     "express": "^4.16.4",
     "nodemon": "^1.18.10",
